# boltzmann-mapreduce

./: .gitignore  PLAN.md  README.md  SKILL.md  demo.py  islo.yaml  pyproject.toml  run.sh
.github/workflows/: ci.yml
bmr/: __init__.py  backends.py  core.py  viz.py  worker.py
docs/: index.html
paper/: RELEASE_CHECKLIST.md  REVIEWS.md  body_5pp.tex  main_5pp.tex  refs.bib
runs/: daytona_fanout.txt  fanout_local.txt  fanout_sweep.txt  islo_run.txt  logistic_sweep.txt  tensorlake_fanout.txt
scripts/: build_paper.py  daytona_fanout.py  fanout_local.py  fanout_sweep.py  tensorlake_fanout.py  verify_e2e.py
submission/: README.md  body.tex  fig_contract.tex  main.tex  refs.bib
tests/: test_core.py
