[project]
name = "bmr"
version = "0.1.0"
description = "Boltzmann MapReduce: a partition-function reduce for forkable sandboxes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.scripts]
bmr-worker = "bmr.worker:main"

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bmr"]
