[project]
name = "bmr"
version = "0.1.0"
description = "Evidence-aware MapReduce for forkable compute"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
daytona = ["daytona>=0.197.0"]
tensorlake = ["tensorlake>=0.5.70"]

[project.scripts]
bmr-worker = "bmr.worker:main"

[dependency-groups]
dev = [
    "hatchling>=1.27",
    "pytest>=7.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bmr"]
